Fixed Footer link alignment. Changed color scheme.

--- a/src/components/sass/Chat.scss
+++ b/src/components/sass/Chat.scss
@@ -10,7 +10,7 @@
 .channel-bar {
 	width: 5vw;
 	height: 90vh;
-	background: purple;
+	background: #7209B7;
 	display: flex;
 	flex-direction: column;
 	transition: all 0.5s ease-in-out;
