--- a/src/components/sass/Header.scss
+++ b/src/components/sass/Header.scss
@@ -3,7 +3,7 @@
 header {
 	width: 100vw;
 	height: 10vh;
-	background: blue;
+	background: #7209b7;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
