--- a/src/components/sass/SignUp.scss
+++ b/src/components/sass/SignUp.scss
@@ -1,7 +1,7 @@
 #signup-wrapper {
 	width: 100vw;
 	height: 90vh;
-	background: yellow;
+	background: #f0efeb;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -10,11 +10,12 @@
 #signup-box {
 	width: 70vw;
 	height: 60vh;
-	background: green;
+	background: #7209B7;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
+	border-radius: 35px;
 }
 
 #signup-title {
@@ -26,6 +27,8 @@
 #signup-box > label {
 	width: 40vw;
 	height: 5vh;
+	font-size: 1.2rem;
+	color: #F0EFEB;
 }
 
 #signup-box > input {
